making folder clear and adapting

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 ##### FONTS #####
 
-font_family           FiraCode Nerd Font
+font_family           JetBrainsMono Nerd Font
 italic_font           auto
 bold_font             auto
 bold_italic_font      auto
