--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g prefix ^A
+set -g prefix C-a
 
 set -g base-index 1
 set -g renumber-windows on
@@ -35,7 +35,7 @@ set -g @catppuccin_window_status_style "rounded"
 
 # Load catppuccin
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# For TPM, instead use `run ~/.tmux/plugins/tmux/catppuccin.tmux`
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 
 # Make the status line pretty and add some modules
 set -g status-right-length 100
